--- a/farmersmaket/src/app/footer/footer.component.html
+++ b/farmersmaket/src/app/footer/footer.component.html
@@ -1,3 +1,69 @@
-<footer>
-    <p  class="text-xs-center">© Copyright 2020. All rights reserved.</p>
-  </footer>
+<!--====== FOOTER PART START ======-->
+
+<section id="footer" class="footer-area">
+  <div class="container">
+      <div class="footer-widget pt-75 pb-120">
+          <div class="row">
+              <div class="col-lg-3 col-md-5 col-sm-7">
+                  <div class="footer-logo mt-40">
+                      <a href="#">
+                          <img src="assets/images/logo.png" alt="Logo" class="logo-size">
+                      </a>
+                      <p class="mt-10">This is your one stop shop where you can get all your goodies. Why go to the market when the market can come to you!</p>
+                  </div> <!-- footer logo -->
+              </div>
+
+              <div class="col-lg-4 col-md-5 col-sm-7 offset-lg-5">
+                  <div class="footer-info mt-50">
+                      <h5 class="f-title">Contact Info</h5>
+                      <ul>
+                          <li>
+                              <div class="single-footer-info mt-20">
+                                  <span>Phone :</span>
+                                  <div class="footer-info-content">
+                                      <p>+88123 4567 890</p>
+                                      <p>+88123 4567 890</p>
+                                  </div>
+                              </div> <!-- single footer info -->
+                          </li>
+                          <li>
+                              <div class="single-footer-info mt-20">
+                                  <span>Email :</span>
+                                  <div class="footer-info-content">
+                                      <p>contact@yourmail.com</p>
+                                      <p>support@yourmail.com</p>
+                                  </div>
+                              </div> <!-- single footer info -->
+                          </li>
+                          <li>
+                              <div class="single-footer-info mt-20">
+                                  <span>Links :</span>
+                                  <div class="footer-info-content">
+                                    <ul>
+                                        <li><a href="#">About</a></li>
+                                    </ul>
+                                  </div>
+                              </div> <!-- single footer info -->
+                          </li>
+                      </ul>
+                  </div> <!-- footer link -->
+              </div>
+          </div> <!-- row -->
+      </div> <!-- footer widget -->
+      <div class="footer-copyright pt-15 pb-15">
+          <div class="row">
+              <div class="col-lg-12">
+                  <div class="copyright text-center">
+                      <p>Crafted by <a href="https://uideck.com" rel="nofollow">UIdeck</a></p>
+                  </div> <!-- copyright -->
+              </div>
+          </div> <!-- row -->
+      </div> <!--  footer copyright -->
+  </div> <!-- container -->
+</section>
+
+<!--====== FOOTER PART ENDS ======-->
+
+<!--====== BACK TO TOP PART START ======-->
+
+<a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
