--- a/farmersmaket/src/app/header/header.component.html
+++ b/farmersmaket/src/app/header/header.component.html
@@ -1,22 +1,4 @@
 <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
-    <a class="navbar-brand" href="#">Farmers Market</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse"
-      aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarCollapse">
-      <ul class="navbar-nav mr-auto">
-  
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/home">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact-list">Customer</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/contact-create">Farmer</a>
-        </li>
-  
-      </ul>
-    </div>
-  </nav>
+  <span class="navbar-brand">Farmers Market</span>
+</nav>
+
