--- a/farmersmaket/src/app/homepage/homepage.component.html
+++ b/farmersmaket/src/app/homepage/homepage.component.html
@@ -1,168 +1,243 @@
-  <!--====== CONTACT PART START ======-->
-  
-  <section id="contact" class="contact-area pt-115">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-lg-12">
-                <div class="contact-title text-center">
-                    <h2 class="title">Sign in</h2>
-                </div> <!-- contact title -->
-            </div>
-        </div> <!-- row -->
-        
-        <div class="contact-box mt-70">
-            <div class="row">
-                <div class="col-lg-4">
-                    <div class="contact-info pt-25">
-                        <h4 class="info-title">Contact Info</h4>
-                        <ul>
-                            <li>
-                                <div class="single-info mt-30">
-                                    <div class="info-icon">
-                                        <i class="lni-phone-handset"></i>
-                                    </div>
-                                    <div class="info-content">
-                                        <p>+88 1234 56789</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                            <li>
-                                <div class="single-info mt-30">
-                                    <div class="info-icon">
-                                        <i class="lni-envelope"></i>
-                                    </div>
-                                    <div class="info-content">
-                                        <p>contact@yourmail.com</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                            <li>
-                                <div class="single-info mt-30">
-                                    <div class="info-icon">
-                                        <i class="lni-home"></i>
-                                    </div>
-                                    <div class="info-content">
-                                        <p>203, Envato Labs, Behind Alis Steet,Australia</p>
-                                    </div>
-                                </div> <!-- single info -->
-                            </li>
-                        </ul>
-                    </div> <!-- contact info -->
-                </div> 
-                <div class="col-lg-8">
-                    <div class="contact-form">
-                        <form id="contact-form" action="assets/contact.php" method="post" data-toggle="validator">
-                            <div class="row">
-                                <div class="col-lg-6">
-                                    <div class="single-form form-group">
-                                        <input type="text" name="name" placeholder="Enter Your Name" data-error="Name is required." required="required">
-                                        <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
-                                </div>
-                                <div class="col-lg-6">
-                                    <div class="single-form form-group">
-                                        <input type="email" name="email" placeholder="Enter Your Email"  data-error="Valid email is required." required="required">
-                                        <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
-                                </div>
-                                <div class="col-lg-12">
-                                    <div class="single-form form-group">
-                                        <textarea name="message" placeholder="Enter Your Message" data-error="Please,leave us a message." required="required"></textarea>
-                                        <div class="help-block with-errors"></div>
-                                    </div> <!-- single form -->
-                                </div>
-                                <p class="form-message"></p>
-                                <div class="col-lg-12">
-                                    <div class="single-form form-group">
-                                        <button class="main-btn" type="submit">CONTACT NOW</button>
-                                    </div> <!-- single form -->
-                                </div>
-                            </div> <!-- row -->
-                        </form>
-                    </div> <!-- row -->
-                </div> 
-            </div> <!-- row -->
-          </div>
+<!--====== CONTACT PART START ======-->
 
-            <div class="row justify-content-center mt-70">
-              <div class="col-lg-12">
-                  <div class="contact-title text-center">
-                      <h2 class="title">Signup</h2>
-                  </div> <!-- contact title -->
+<section id="contact" class="contact-area pt-115">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-lg-12">
+        <div class="contact-title text-center">
+          <h2 class="title">SIGN IN</h2>
+        </div>
+        <!-- contact title -->
+      </div>
+    </div>
+    <!-- row -->
+
+    <div class="contact-box">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="contact-form">
+            <form
+              id="contact-form"
+              action="assets/contact.php"
+              method="post"
+              data-toggle="validator"
+            >
+              <div class="row">
+                <div class="col-lg-12">
+                  <div class="single-form form-group">
+                    <input
+                      type="text"
+                      name="name"
+                      placeholder="Enter Your Email"
+                      data-error="Email is required."
+                      required="required"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+
+                <div class="col-lg-12">
+                  <div class="single-form form-group">
+                    <input
+                      type="text"
+                      name="name"
+                      placeholder="Enter Your Password"
+                      data-error="Password is required."
+                      required="required"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+                <div class="col-lg-12">
+                  <div class="single-form form-group">
+                    <select
+                      class="form-control"
+                      id="exampleFormControlSelect1"
+                      required="required"
+                    >
+                      <option disabled selected>Select User Type</option>
+                      <option>farmer</option>
+                      <option>customer</option>
+                    </select>
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+                <p class="form-message"></p>
+                <div class="col-lg-12">
+                  <div class="single-form form-group">
+                    <button class="main-btn" type="submit">SIGN IN</button>
+                  </div>
+                  <!-- single form -->
+                </div>
               </div>
-          </div> <!-- row -->
-          <div class="contact-box ">
-            <div class="row">
-              <div class="col-lg-4">
-                  <div class="contact-info pt-25">
-                      <h4 class="info-title">Contact Info</h4>
-                      <ul>
-                          <li>
-                              <div class="single-info mt-30">
-                                  <div class="info-icon">
-                                      <i class="lni-phone-handset"></i>
-                                  </div>
-                                  <div class="info-content">
-                                      <p>+88 1234 56789</p>
-                                  </div>
-                              </div> <!-- single info -->
-                          </li>
-                          <li>
-                              <div class="single-info mt-30">
-                                  <div class="info-icon">
-                                      <i class="lni-envelope"></i>
-                                  </div>
-                                  <div class="info-content">
-                                      <p>contact@yourmail.com</p>
-                                  </div>
-                              </div> <!-- single info -->
-                          </li>
-                          <li>
-                              <div class="single-info mt-30">
-                                  <div class="info-icon">
-                                      <i class="lni-home"></i>
-                                  </div>
-                                  <div class="info-content">
-                                      <p>203, Envato Labs, Behind Alis Steet,Australia</p>
-                                  </div>
-                              </div> <!-- single info -->
-                          </li>
-                      </ul>
-                  </div> <!-- contact info -->
-              </div> 
-              <div class="col-lg-8">
-                  <div class="contact-form">
-                      <form id="contact-form" action="assets/contact.php" method="post" data-toggle="validator">
-                          <div class="row">
-                              <div class="col-lg-6">
-                                  <div class="single-form form-group">
-                                      <input type="text" name="name" placeholder="Enter Your Name" data-error="Name is required." required="required">
-                                      <div class="help-block with-errors"></div>
-                                  </div> <!-- single form -->
-                              </div>
-                              <div class="col-lg-6">
-                                  <div class="single-form form-group">
-                                      <input type="email" name="email" placeholder="Enter Your Email"  data-error="Valid email is required." required="required">
-                                      <div class="help-block with-errors"></div>
-                                  </div> <!-- single form -->
-                              </div>
-                              <div class="col-lg-12">
-                                  <div class="single-form form-group">
-                                      <textarea name="message" placeholder="Enter Your Message" data-error="Please,leave us a message." required="required"></textarea>
-                                      <div class="help-block with-errors"></div>
-                                  </div> <!-- single form -->
-                              </div>
-                              <p class="form-message"></p>
-                              <div class="col-lg-12">
-                                  <div class="single-form form-group">
-                                      <button class="main-btn" type="submit">CONTACT NOW</button>
-                                  </div> <!-- single form -->
-                              </div>
-                          </div> <!-- row -->
-                      </form>
-                  </div> <!-- row -->
-              </div> 
-          </div> <!-- row -->
-        </div> <!-- contact box -->
-    </div> <!-- container -->
-  </section>
+              <!-- row -->
+            </form>
+          </div>
+          <!-- row -->
+        </div>
+      </div>
+      <!-- row -->
+    </div>
+
+    <div class="row justify-content-center mt-70">
+      <div class="col-lg-12">
+        <div class="contact-title text-center">
+          <h2 class="title">SIGN UP</h2>
+        </div>
+        <!-- contact title -->
+      </div>
+    </div>
+    <!-- row -->
+    <div class="contact-box">
+      <div class="row">
+        <div class="col-lg-12">
+          <div class="contact-form">
+            <form
+              id="contact-form"
+              action="assets/contact.php"
+              method="post"
+              data-toggle="validator"
+            >
+              <div class="row">
+                <label for="adress" class="col-lg-12 col-form-label-lg">Personal Information</label>
+                <div class="col-lg-4">
+                  <div class="single-form form-group">
+                    <input
+                      type="text"
+                      name="firstName"
+                      placeholder="Enter Your First Name"
+                      data-error="First Name is required."
+                      required="required"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+                <div class="col-lg-4">
+                  <div class="single-form form-group">
+                    <input
+                      type="text"
+                      name="lastName"
+                      placeholder="Enter Your Last Name"
+                      data-error="Last Name is required."
+                      required="required"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+                <div class="col-lg-4">
+                  <div class="single-form form-group">
+                    <input
+                      type="text"
+                      name="phone"
+                      placeholder="Enter Your Phone Number"
+                      data-error="Valid Phone Number is required."
+                      required="required"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+                <div class="col-lg-6">
+                  <div class="single-form form-group">
+                    <input
+                      type="email"
+                      name="email"
+                      placeholder="Enter Your Email"
+                      data-error="Valid email is required."
+                      required="required"
+                    />
+                    <div class="help-block with-errors"></div>
+                  </div>
+                  <!-- single form -->
+                </div>
+                <div class="col-lg-6">
+                    <div class="single-form form-group">
+                        <input
+                        type="password"
+                        name="password"
+                        placeholder="Enter Your New Password"
+                        data-error="Password is required."
+                        required="required"
+                      />
+                      <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- single form -->
+                  </div>
+                  <label for="adress" class="col-lg-12 col-form-label-lg">Address</label>
+                  <div class="col-lg-6">
+                    <div class="single-form form-group">
+                      <input
+                        type="text"
+                        name="street"
+                        placeholder="Enter Your Street"
+                        data-error="Street is required."
+                        required="required"
+                      />
+                      <div class="help-block with-errors"></div>
+                    </div>
+                    <!-- single form -->
+                  </div>
+                  <div class="col-lg-6">
+                      <div class="single-form form-group">
+                          <input
+                          type="text"
+                          name="city"
+                          placeholder="Enter Your City"
+                          data-error="City is required."
+                          required="required"
+                        />
+                        <div class="help-block with-errors"></div>
+                      </div>
+                      <!-- single form -->
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="single-form form-group">
+                          <input
+                            type="text"
+                            name="state"
+                            placeholder="Enter Your State"
+                            data-error="State is required."
+                            required="required"
+                          />
+                          <div class="help-block with-errors"></div>
+                        </div>
+                        <!-- single form -->
+                      </div>
+                      <div class="col-lg-6">
+                          <div class="single-form form-group">
+                              <input
+                              type="text"
+                              name="zip"
+                              placeholder="Enter Your ZIP"
+                              data-error="ZIP is required."
+                              required="required"
+                            />
+                            <div class="help-block with-errors"></div>
+                          </div>
+                          <!-- single form -->
+                        </div>
+                <p class="form-message"></p>
+                <div class="col-lg-12">
+                  <div class="single-form form-group">
+                    <button class="main-btn" type="submit">SIGN UP</button>
+                  </div>
+                  <!-- single form -->
+                </div>
+              </div>
+              <!-- row -->
+            </form>
+          </div>
+          <!-- row -->
+        </div>
+      </div>
+      <!-- row -->
+    </div>
+    <!-- contact box -->
+  </div>
+  <!-- container -->
+</section>
