--- a/farmersmaket/src/app/homepage/homepage.component.html
+++ b/farmersmaket/src/app/homepage/homepage.component.html
@@ -53,7 +53,7 @@
                 <div class="col-lg-12">
                   <div class="single-form form-group">
                     <select
-                      class="form-control"
+                      class="form-control form-control-md"
                       id="exampleFormControlSelect1"
                       required="required"
                     >
