--- a/farmersmaket/src/app/footer/footer.component.html
+++ b/farmersmaket/src/app/footer/footer.component.html
@@ -66,4 +66,4 @@
 
 <!--====== BACK TO TOP PART START ======-->
 
-<a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
+<!-- <a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a> -->
