--- a/farmersmaket/src/app/customer/order-history/order-history.component.html
+++ b/farmersmaket/src/app/customer/order-history/order-history.component.html
@@ -7,7 +7,9 @@
     <div class="row justify-content-center">
       <div class="col-lg-12">
         <div class="contact-title text-center">
-          <h2 class="title">Sign in</h2>
+          <h2 class="title" *ngIf="checkOrders() else no_orders">{{orders[0].status}} order history</h2>
+          <ng-template #no_orders><h2 class="title">No Orders Available</h2></ng-template>
+          <h2 class="info-title">from {{lowerDate}} to {{upperDate}} </h2>
         </div> <!-- contact title -->
       </div>
     </div> <!-- row -->
@@ -67,8 +69,8 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let product of order.products">
-                      <th scope="row">1</th>
+                    <tr *ngFor="let product of order.products; let i = index">
+                      <th scope="row">{{i+1}}</th>
                       <td>{{product.product_name}}</td>
                       <td>{{product.unit}}</td>
                       <td>{{product.unit_price}}</td>
