update sign in and sign up components

--- a/farmersmaket/src/app/signup/signup.component.css
+++ b/farmersmaket/src/app/signup/signup.component.css
@@ -6,3 +6,9 @@
 .button {
   text-align: center;
 }
+.navbar-nav .nav-item a{
+  font-size: 25px;
+  text-decoration: none;
+  font-family: cursive;
+
+}
