--- a/farmersmaket/src/app/signin/homepage.component.css
+++ b/farmersmaket/src/app/signin/homepage.component.css
@@ -11,3 +11,14 @@ border-radius: 10px;
     text-align: center;
     
 }
+#contact{
+    margin-top: 100px;
+}
+.navbar-nav .nav-item a{
+    font-size: 25px;
+    text-decoration: none;
+    font-family: cursive;
+  }
+  a{
+      text-decoration: none;
+  }
