--- a/farmersmaket/src/app/signup/signup.component.html
+++ b/farmersmaket/src/app/signup/signup.component.html
@@ -1,3 +1,35 @@
+<!--====== HEADER PART START ======-->
+
+<header class="header-area">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <nav class="navbar navbar-expand-lg">
+                    <a class="navbar-brand" href="index.html">
+                        <img src="assets/images/logo.png" alt="Logo" class="logo-size">
+                    </a> <!-- Logo -->
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="bar-icon"></span>
+                        <span class="bar-icon"></span>
+                        <span class="bar-icon"></span>
+                    </button>
+  
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul id="nav" class="navbar-nav ml-auto">
+                            <li class="nav-item">
+                                <a class ="welcome" data-scroll-nav="0" routerLink="home/signup">Welcome to Farmers Market</a>
+                            </li>                            
+                        </ul> <!-- navbar nav -->
+                    </div>
+                </nav> <!-- navbar -->
+            </div>
+        </div> <!-- row -->
+    </div> <!-- container -->
+  </header>
+  
+  <!--====== HEADER PART ENDS ======-->
+
+
 <!--====== CONTACT PART START ======-->
 <section id="contact" class="contact-area pt-115">
   <div class="container">    
@@ -62,16 +94,16 @@
                     <input
                       type="text"
                       name="phone"
-                      placeholder="Enter Your Phone Number"
+                      placeholder="(301) 111-2222"
                       required="required"
                       [formControl]="signupForm.get('phone')"
                     />
                     <div
                       div
                       class="text-danger"
-                      *ngIf="!signupForm.get('email').valid"
+                      *ngIf="!signupForm.get('phone').valid"
                     >
-                      Please provide a phone number*
+                    Please provide a Phone number* 
                     </div>
                   </div>
                   <!-- single form -->
