fixed routing issues in child route

--- a/farmersmaket/src/app/signin/homepage.component.html
+++ b/farmersmaket/src/app/signin/homepage.component.html
@@ -99,7 +99,7 @@
                     <button class="main-btn" type="submit" [disabled]= "!signinForm.valid">SIGN IN</button>                    
                   </div>
                   <div class="single-form form-group button">                   
-                    <a class="main-btn"  id ="signup" routerLink = "signup" >SIGN UP</a>
+                    <a class="main-btn"  id ="signup" [routerLink] = "['customers','farmers']" >SIGN UP</a>
                   </div>
                   <!-- single form -->
                 </div>
