--- a/farmersmaket/src/app/signin/homepage.component.html
+++ b/farmersmaket/src/app/signin/homepage.component.html
@@ -17,7 +17,7 @@
                   <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul id="nav" class="navbar-nav ml-auto">
                       <li class="nav-item">
-                          <a class ="welcome" data-scroll-nav="0" routerLink="home/signup">Welcome to Farmers Market</a>
+                          <a class ="welcome" data-scroll-nav="0" routerLink="signup">Welcome to Farmers Market</a>
                       </li>                            
                   </ul> <!-- navbar nav -->
                   </div>
@@ -99,7 +99,7 @@
                     <button class="main-btn" type="submit" [disabled]= "!signinForm.valid">SIGN IN</button>                    
                   </div>
                   <div class="single-form form-group button">                   
-                    <a class="main-btn"  id ="signup" [routerLink] = "['customers','farmers']" >SIGN UP</a>
+                    <a class="main-btn"  id ="signup" [routerLink] = "['signup']" >SIGN UP</a>
                   </div>
                   <!-- single form -->
                 </div>
