Order router Fix

--- a/farmersmaket/src/app/farmer/header-farmer/header-farmer.component.html
+++ b/farmersmaket/src/app/farmer/header-farmer/header-farmer.component.html
@@ -16,13 +16,13 @@
                     <div class="collapse navbar-collapse"  id="navbarNavDropdown">
                         <ul id="nav" class="navbar-nav ml-auto">
                             <li class="nav-item active ">
-                                <a data-scroll-nav="0" routerLink="/farmer">Products</a> 
+                                <a  [routerLink]="['/farmers']">Products</a> 
                             </li>
                             <li class="nav-item active ">
-                                <a data-scroll-nav="0" routerLink="product/add">Add product</a> 
+                                <a  [routerLink]="['/farmers/product/add']">Add product</a> 
                             </li>
                             <li class="nav-item">
-                                <a data-scroll-nav="0" routerLink="#orders">Orders</a>
+                                <a  [routerLink]="['/farmers/orders']">Orders</a>
                             </li>
                         </ul> <!-- navbar nav -->
                     </div>
