finalize all services and delete console logs

--- a/farmersmaket/src/app/customer/shopping-cart/shopping-cart.component.html
+++ b/farmersmaket/src/app/customer/shopping-cart/shopping-cart.component.html
@@ -65,7 +65,7 @@
                                   
                                 </div>
                                 <label>
-                                  <input type="checkbox" checked="checked" name="sameadr" formControlName = 'sameadr'> Shipping address same as billing
+                                  <input type="checkbox" checked="checked" name="sameadr" > Shipping address same as billing
                                 </label>
                                 <input type="submit" value="Continue to checkout" class="btn" >
                               </form>
